[package]
name = "perun-soroban-contract"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "20.5.0"


[dev_dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils"] }
ed25519-dalek = { version = "2" }
sha3 = { version = "0.10.8"}
k256 = {version = "0.11.6"}
rand = { version = "0.8.5" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true